[package]
name = "download-service"
version = "0.1.0"
edition = "2018"
authors = ["Bassem Girgis <bgirgis@pm.me>"]

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
# logging
log = { version = "^0.4", features = [
  "max_level_debug",
  "release_max_level_info",
] }
fern = "^0.5"

# grpc minimum
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }

# structopt
structopt = { version = "0.3", features = ["paw"] }

# other
chrono = "^0.4"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5"
